--- a/aardvark-development/themes/shared/css/slider.css
+++ b/aardvark-development/themes/shared/css/slider.css
@@ -1,14 +1,13 @@
 div.slide {
-	position: relative;
 	width: 218px;
 	margin: 10px 0 0 34px;
+	position: relative;
 }
 
 div.track {
 	background: url(../images/slider_track.png) no-repeat;
 	height: 28px;
 	width: 218px;
-	position: relative;
 }
 
 div.trackAlt { background: url(../images/slider_track2.png); }
@@ -17,7 +16,6 @@ div.handle {
 	background: url(../images/slider_handle.png) no-repeat bottom center;
 	height: 28px;
 	width: 18px;
-	position: relative;
 	overflow: hidden;
 	cursor: pointer;
 }
